fix quiz button not showing

--- a/src/components/quiz/_Quiz.scss
+++ b/src/components/quiz/_Quiz.scss
@@ -1,5 +1,5 @@
 .quiz {
-	height: 1200px;
+	margin-top: 6.5em;
 	&__catalog-btn {
 		min-width: 100%;
 		padding: $padding-md 0;
